# website

./: Cargo.toml  README.md  Rocket.toml
frontend/css/: 404.css  base.css  index.css  projects.css
frontend/html/: 404.html  index.html  projects.html
sql/: V1__initial.sql
src/: errors.rs  hosts.rs  main.rs
src/domain/: images.rs  main.rs  mod.rs
src/routes/: images.rs  main.rs
static/: projects.css
templates/: 404.html  index.html  projects.html
