[package]
name = "klappstuhl_me"
version = "0.2.0"
edition = "2021"
license = "AGPL-v3"
description = "A custom information website about Klappstuhl and API support."

[dependencies]
dotenv = "0.15.0"
once_cell = { version = "1.8.0", features = [] }
tokio = { version = "1", features = ["full"] }
rocket = "=0.5.0-rc.3"
sqlx = "0.7.1"
nanoid = "0.4.0"
duplicate = "1.0.0"
url = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.113"
base64 = "0.22.1"
mime = "0.3.17"
tree_magic = "0.2.3"
multipart = "0.18.0"
imagesize = "0.13.0"
askama = "0.12.1"

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]
